--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,21 @@ name = "zero2prod"
 [dependencies]
 actix-web = "=4.0.0-beta.8"
 actix-http = "=3.0.0-beta.8"
+serde = { version = "1", features = ["derive"]}
+config = "0.11.0"
+
+# Using table-like toml syntax to avoid a super-long line!
+[dependencies.sqlx]
+version = "0.5.5"
+default-features = false
+features = [
+    "runtime-actix-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate"
+]
 
 [dev-dependencies]
 actix-rt = "2"
