--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ actix-web = "=4.0.0-beta.8"
 actix-http = "=3.0.0-beta.8"
 serde = { version = "1", features = ["derive"]}
 config = "0.11.0"
-
+chrono = "0.4.15"
+uuid = {version = "0.8.2", features = ["v4"] }
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
 version = "0.5.5"
