--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,11 @@ serde = { version = "1", features = ["derive"]}
 config = "0.11.0"
 chrono = "0.4.15"
 uuid = {version = "0.8.2", features = ["v4"] }
+tracing = { version = "0.1", features = ["log"] }
+tracing-futures = "0.2.5"
+tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.2.5"
+tracing-log = "0.1.2"
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
 version = "0.5.5"
