--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.2.5"
 tracing-log = "0.1.2"
+tracing-actix-web = "0.4.0-beta.8"
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
 version = "0.5.5"
@@ -43,3 +44,4 @@ features = [
 actix-rt = "2"
 reqwest = "0.11"
 tokio = "1"
+once_cell = "1.8.0"
