--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -64,6 +64,11 @@ jobs:
         run: |
           sudo apt-get install libpq-dev -y
           SKIP_DOCKER=true ./scripts/init_db.sh
+      - name: Check sqlx metadata file
+        run: cargo sqlx prepare --check -- --bin zero2prod
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
       - name: Run cargo test
         uses: actions-rs/cargo@v1
         with:
