--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -63,6 +63,7 @@ jobs:
       - name: Migrate database
         run: |
           sudo apt-get install libpq-dev -y
+          cargo install --version=0.5.5 sqlx-cli --no-default-features --features postgres
           SKIP_DOCKER=true ./scripts/init_db.sh
       - name: Check sqlx metadata file
         run: cargo sqlx prepare --check -- --bin zero2prod
