--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tracing-bunyan-formatter = "0.2.5"
 tracing-log = "0.1.2"
 tracing-actix-web = "0.4.0-beta.8"
 serde-aux = "2.2.0"
+unicode-segmentation = "1.8.0"
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
 version = "0.5.5"
@@ -47,3 +48,4 @@ actix-rt = "2"
 reqwest = "0.11"
 tokio = "1"
 once_cell = "1.8.0"
+claim = "0.5.0"
