--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ tracing-log = "0.1.2"
 tracing-actix-web = "0.4.0-beta.8"
 serde-aux = "2.2.0"
 unicode-segmentation = "1.8.0"
+validator = "0.14.0"
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
 version = "0.5.5"
@@ -49,3 +50,9 @@ reqwest = "0.11"
 tokio = "1"
 once_cell = "1.8.0"
 claim = "0.5.0"
+# We are not using fake >= 2.4 because it relies on rand 0.8
+# which has been recently released and it is not yet used by
+# quickcheck (solved in its upcoming 1.0 release!)
+fake = "~2.3"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
