--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tracing-actix-web = "0.4.0-beta.8"
 serde-aux = "2.2.0"
 unicode-segmentation = "1.8.0"
 validator = "0.14.0"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 # Using table-like toml syntax to avoid a super-long line!
 [dependencies.sqlx]
 version = "0.5.5"
@@ -46,8 +47,7 @@ features = [
 
 [dev-dependencies]
 actix-rt = "2"
-reqwest = "0.11"
-tokio = "1"
+tokio = { version = "1", features = ["rt", "macros"] }
 once_cell = "1.8.0"
 claim = "0.5.0"
 # We are not using fake >= 2.4 because it relies on rand 0.8
@@ -56,3 +56,5 @@ claim = "0.5.0"
 fake = "~2.3"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
+wiremock = "0.5"
+serde_json = "1"
