--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/main.rs"
 name = "zero2prod"
 
 [dependencies]
+anyhow = "1"
 actix-web = "=4.0.0-beta.8"
 actix-http = "=3.0.0-beta.8"
 rand = { version = "0.8", features=["std_rng"] }
@@ -28,6 +29,7 @@ tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"]
 tracing-bunyan-formatter = "0.2.4"
 tracing-log = "0.1.2"
 tracing-actix-web = "0.4.0-beta.8"
+thiserror = "1"
 serde-aux = "2.2.0"
 unicode-segmentation = "1.8.0"
 validator = "0.14.0"
