use argon for testing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,14 @@ path = "src/main.rs"
 name = "zero2prod"
 
 [dependencies]
+argon2 = { version = "0.3", features = ["std"] }
+
 anyhow = "1"
 base64 = "0.13"
 actix-web = "=4.0.0-beta.8"
 actix-http = "=3.0.0-beta.8"
 rand = { version = "0.8", features=["std_rng"] }
-serde = { version = "1", features = ["derive"]}
+serde = { version = "1", features = ["derive"] }
 config = "0.11.0"
 chrono = "0.4.15"
 uuid = {version = "0.8.2", features = ["v4"] }
